// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`doesn't parses section if unsupported 1`] = `
[
  {
    "content": "# 1 Unsupported section",
    "type": "line",
  },
  {
    "content": "1 paragraph.",
    "type": "line",
  },
]
`;

exports[`parses multiple paragraphs 1`] = `
[
  {
    "content": "1 paragraph.",
    "type": "line",
  },
  {
    "content": "2 paragraph.",
    "type": "line",
  },
  {
    "content": "3 paragraph.",
    "type": "line",
  },
]
`;

exports[`parses nested sectioning 1`] = `
[
  {
    "children": [
      {
        "content": "1 paragraph.",
        "type": "line",
      },
    ],
    "name": null,
    "type": "section",
  },
  {
    "children": [
      {
        "content": "2 paragraph.",
        "type": "line",
      },
      {
        "children": [
          {
            "content": "3 paragraph.",
            "type": "line",
          },
        ],
        "name": "1 Sub-section",
        "type": "subsection",
      },
    ],
    "name": "1 Section",
    "type": "section",
  },
  {
    "children": [
      {
        "content": "4 paragraph.",
        "type": "line",
      },
    ],
    "name": "2 Sub-section",
    "type": "section",
  },
  {
    "children": [
      {
        "content": "5 paragraph.",
        "type": "line",
      },
    ],
    "name": "2 Section",
    "type": "section",
  },
]
`;

exports[`parses section at start 1`] = `
[
  {
    "children": [
      {
        "content": "1 paragraph.",
        "type": "line",
      },
    ],
    "name": "1 Section",
    "type": "section",
  },
]
`;

exports[`parses section in middle 1`] = `
[
  {
    "children": [
      {
        "content": "1 paragraph.",
        "type": "line",
      },
    ],
    "name": null,
    "type": "section",
  },
  {
    "children": [
      {
        "content": "2 paragraph.",
        "type": "line",
      },
    ],
    "name": "1 Section",
    "type": "section",
  },
]
`;

exports[`parses single paragraph 1`] = `
[
  {
    "content": "1 paragraph.",
    "type": "line",
  },
]
`;

exports[`parses whitespace 1`] = `[]`;
